--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "uuid": "^9.0.1"
-  },
-  "devDependencies": {
+    "uuid": "^9.0.1",
     "nodemon": "^3.0.1"
   }
 }
